--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,2 +1,3 @@
-<h1>Hello World</h1>
+<h1>Curso de Angular</h1>
 <app-first-component></app-first-component>
+<app-parent-data [UserName] = "name" [dados] = "dados"></app-parent-data>
