usando condicionais e diretivas

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1>Curso de Angular</h1>
+<div class="class">
+<h1>- Curso de Angular - </h1>
+</div>
 <app-first-component></app-first-component>
 <app-parent-data [UserName] = "name" [dados] = "dados"></app-parent-data>
+<app-directives></app-directives>
+<app-if-render></app-if-render>
+<app-eventos></app-eventos>
+<app-emitter></app-emitter>
