--- a/angular/src/app/components/parent-data/parent-data.component.html
+++ b/angular/src/app/components/parent-data/parent-data.component.html
@@ -1,4 +1,7 @@
+<div class="class">
 <h1>Descrevendo Usuário:</h1>
 <p>Nome: {{ UserName }}</p>
-<p>Email: {{dados.email}}</p>
-<p>Cargo: {{dados.cargo}}</p>
+<p>Email: {{ dados.email }}</p>
+<p>Cidade: {{ dados.cidade }}</p>
+<p>Cargo: {{ dados.cargo }}</p>
+</div>
