--- a/angular/src/app/components/emitter/emitter.component.html
+++ b/angular/src/app/components/emitter/emitter.component.html
@@ -2,6 +2,6 @@
     <h1>O numero é: {{ myNumber }}</h1>
     <p *ngIf="myNumber === 10; else notWin">Congratulations, You Win!!!</p>
     <app-change-number (changeNumber)="onChangeNumber()"></app-change-number>
-    <ng-template class="p" #notWin> tente novamente...</ng-template>
+    <ng-template class="p" #notWin> Tente até conseguir o numero 10 </ng-template>
     
 </div>
