--- a/angular/src/app/components/list-render/list-render.component.html
+++ b/angular/src/app/components/list-render/list-render.component.html
@@ -3,6 +3,7 @@
 <ul>
     <li *ngFor="let animal of animals">Name: {{ animal.name }} - Type: {{  animal.type }}
         <button (click)="showAge(animal)">Show Age</button>
+        <button (click)="removeAnimal(animal)"> Remover animal</button>
     </li>
 </ul>
     <p> {{ AnimalAge }}</p>
