--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,10 +1,9 @@
-<div class="class">
-<h1>- Curso de Angular - </h1>
-</div>
-<app-first-component></app-first-component>
-<app-parent-data [UserName] = "name" [dados] = "dados"></app-parent-data>
-<app-directives></app-directives>
-<app-if-render></app-if-render>
-<app-eventos></app-eventos>
-<app-emitter></app-emitter>
-<app-list-render></app-list-render>
+<p>Header</p>
+<nav>
+    <a routerLink="/">Home</a>
+    <a routerLink="dados">Dados</a>
+    <a routerLink="/list">List</a>
+    <a routerLink="jogo">Jogo</a>
+</nav>
+<router-outlet></router-outlet>
+<p>Footer</p>
