--- a/angular/src/app/components/list-render/list-render.component.html
+++ b/angular/src/app/components/list-render/list-render.component.html
@@ -1,7 +1,8 @@
 <div class="class">
 <h2>Animais: </h2>
 <ul>
-    <li *ngFor="let animal of animals">Name: {{ animal.name }} - Type: {{  animal.type }}
+    <li *ngFor="let animal of animals">
+        Name: <a routerLink="/list/{{ animal.id }}"> {{ animal.name }}</a> - Type: {{  animal.type }}
         <button (click)="showAge(animal)">Show Age</button>
         <button (click)="removeAnimal(animal)"> Excluir </button>
     </li>
